tests/parser/bug_78/regression.m
foo = 1;
bar = 2;

d2 ...
    (foo, bar);
